# GNN-System

./: .gitignore  README.md  docker-compose.yml  system-feature-inventory.md
backend/: .dockerignore  Dockerfile  GNN_System_Architecture_Report.docx.md  generate_mock_data.py  graph_data_template.xlsx  prepare_circuitnet.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: artifacts.py  celery_app.py  config.py  progress.py  store.py
backend/app/data/: excel_ingestion.py  excel_spec.py  feature_engineering.py  ingestion.py  mock_loader.py  pyg_converter.py  pyg_converter_hetero.py
backend/app/models/: factory.py  gat.py  gcn.py  gin.py  hetero_wrapper.py  mlp.py  sage.py  transformer.py
backend/app/routers/: _mock_training.py  data.py  datasets.py  demo.py  explainer.py  projects.py  tasks.py  training.py
backend/app/schemas/: api_models.py
backend/app/training/: callbacks.py  celery_tasks.py  (+3 more)
backend/data/: circuitnet.pt
backend/demo_data/: demo_multigraph_hetero.v2.xlsx  demo_multigraph_hetero.xlsx  demo_multigraph_homo.v2.xlsx  demo_multigraph_homo.xlsx
backend/mock_data/: edges_test.csv  edges_train.csv  nodes_test.csv  nodes_train.csv
backend/scripts/: generate_demo_data.py  generate_excel_demos.py
backend/tests/: test_api.py  test_converter_hetero.py  test_demo_data.py  test_demo_training_smoke.py  test_excel_ingestion.py  test_excel_router.py  test_explore_hetero.py  test_ingestion.py  test_pyg_converter.py  test_pyg_converter_multi_y.py  test_target_scaler.py  test_training_callbacks.py  test_transformer_model.py
(+140 files in other folders)
